[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/ButtonMashGame/ButtonMashGame.gd" type="Script" id=1]
[ext_resource path="res://src/CaptchaGame/Fonts/16/GOTHIC16.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/CaptchaGame/Fonts/16/GOTHICB16.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/CaptchaGame/Fonts/16/GOTHICI16.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/CaptchaGame/Fonts/16/GOTHICBI16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/ButtonMashGame/Backgrounds/CodeBackground.png" type="Texture" id=6]
[ext_resource path="res://src/ButtonMashGame/Buttons/ButtonUp.png" type="Texture" id=7]
[ext_resource path="res://src/ButtonMashGame/Buttons/ButtonDown.png" type="Texture" id=8]

[node name="ButtonMashGame" type="Node2D"]
position = Vector2( -1.7818, 0 )
script = ExtResource( 1 )

[node name="CodeBackground" type="Sprite" parent="."]
position = Vector2( 633.771, 327.274 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextArea" type="RichTextLabel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 504.0
margin_top = 216.0
margin_right = -515.0
margin_bottom = -290.0
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 533.829
margin_top = 445.147
margin_right = 896.829
margin_bottom = 516.147
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
